线上环境配置

--- a/output/index.html
+++ b/output/index.html
@@ -20,7 +20,7 @@
 		<!--百度地图-->
 		<script src="http://api.map.baidu.com/api?v=2.0&ak=OvuR8Z0yT6pMsOhcnOUPvzpa" type="text/javascript"></script>
 		<title>邀请函</title>
-	<link href="/invitation/output/js/../css/index.css" rel="stylesheet"></head>
+	<link href="/invitation/output/js/../css/index.672a6223.css" rel="stylesheet"></head>
 	<body >
 		<div class="wp">
 		<div class="page-wrap wp-inner">
@@ -177,5 +177,5 @@
 			
 			
 		</script>
-	<script type="text/javascript" src="/invitation/output/js/common.js"></script><script type="text/javascript" src="/invitation/output/js/index.485ef899.js"></script></body>
+	<script type="text/javascript" src="/invitation/output/js/common.js"></script><script type="text/javascript" src="/invitation/output/js/index.672a6223.js"></script></body>
 </html>
