--- a/src/html/index_h01.html
+++ b/src/html/index_h01.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1, minimum-scale=1,user-scalable=0">
-        <meta name="description" content="礼金理是是一个送礼的管家,可以记录送礼和收礼,方便管理和查看">
+        <meta name="description" content="礼金理是一个送礼的管家,可以记录送礼和收礼,方便管理和查看">
         <meta name="keywords" content="请柬，邀请函，礼金理">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta content="yellow" name="apple-mobile-web-app-status-bar-style">
@@ -25,7 +25,9 @@
         <div class="wp">
             <div class="page-wrap wp-inner">
                 <div class="page1-wrap page page1" >
-                    <div class="page1-1  animated js-animate " data-animate="zoomIn">
+
+
+                    <div class="page1-1 js-animate animated" data-animate="zoomIn">
                         <img src="images/L01_page1_1.png" alt="" class="img-100"/>
                     </div>
                     <div class="page1-2 js-animate animated " data-animate="zoomIn">
