--- a/src/html/index.html
+++ b/src/html/index.html
@@ -87,7 +87,7 @@
 				</div>
 				<div class="GPS js-animate animated" data-animate="fadeIn">
 				</div>
-				<div class="page4-info">
+				<div class="data-info">
 					<!--<div class="page4-date color-2 js-animate animated" data-animate="rotateInDownRight">时间：2016年9月15日（农历八月十五）</div>
 					<div class="page4-address color-2 js-animate animated" data-animate="rotateInDownLeft">地点：成都市武侯区皮尔菲特大酒店</div>
 					<div class="page4-time color-2 js-animate animated" data-animate="rotateInDownRight">开席时间：中午12:00</div>
