--- a/src/html/index_h01.html
+++ b/src/html/index_h01.html
@@ -69,12 +69,12 @@
                     </div>
                     <div class="GPS js-animate animated" data-animate="fadeIn">
                     </div>
-                    <div class="page3-info">
-                        <div class="page4-date js-animate animated" data-animate="rotateInDownRight">时间：2016年9月15日（农历八月十五）</div>
+                    <div class="data-info">
+                        <!--<div class="page4-date js-animate animated" data-animate="rotateInDownRight">时间：2016年9月15日（农历八月十五）</div>
                         <div class="page4-address js-animate animated" data-animate="rotateInDownLeft">地点：成都市武侯区皮尔菲特大酒店</div>
                         <div class="page4-time js-animate animated" data-animate="rotateInDownRight">开席时间：中午12:00</div>
                         <div class="page4-times js-animate animated" data-animate="rotateInDownLeft">酒席场数：3场</div>
-                        <div class="page4-times js-animate animated" data-animate="rotateInDownRight">邀请人：李大伟、郑萌萌</div>
+                        <div class="page4-times js-animate animated" data-animate="rotateInDownRight">邀请人：李大伟、郑萌萌</div>-->
                     </div>
                     <!--<div class="page4-text color-1 js-animate animated" data-animate="fadeIn">期待您的光临</div>-->
                 </div>
