--- a/src/html/index.html
+++ b/src/html/index.html
@@ -33,7 +33,7 @@
 				</div>
 			</div>
 			
-			<div class="page2-wrap page page2">
+			<div class="page2-wrap page page2 img-container">
 				<div class="clearfix page2-top">
 					<div class="page2-1 js-animate animated" data-animate="rotateInDownLeft">
 						<img src="http://oeb3otgn7.bkt.clouddn.com/page2_1.png" alt="" class="img-100"/>
@@ -61,7 +61,7 @@
 				</div>
 			</div>
 			
-			<div class="page3-wrap page page3" >
+			<!--<div class="page3-wrap page page3" >
 				<div class="page3-1 js-animate animated" data-animate="zoomInDown">
 					<img src="http://oeb3otgn7.bkt.clouddn.com/test1.png" alt="" class="img-100"/>
 				</div>
@@ -74,7 +74,7 @@
 				<div class="page3-4 js-animate animated" data-animate="fadeIn">
 					<img src="http://oeb3otgn7.bkt.clouddn.com/test4.png" alt="" class="img-100"/>
 				</div>
-			</div>
+			</div>-->
 			
 			<div class="page4-wrap page page4">
 				<div class="page4-1 js-animate animated" data-animate="pulse"></div>
@@ -86,6 +86,7 @@
 					<div id="map-container"></div>
 				</div>
 				<div class="GPS js-animate animated" data-animate="fadeIn">
+					<!--<a class="" href="http://api.map.baidu.com/geocoder?address=四川省成都市高新区香年广场&output=html&src=" ">开始导航</a>-->
 				</div>
 				<div class="data-info">
 					<!--<div class="page4-date color-2 js-animate animated" data-animate="rotateInDownRight">时间：2016年9月15日（农历八月十五）</div>
