--- a/src/html/index_L01.html
+++ b/src/html/index_L01.html
@@ -24,7 +24,7 @@
 	<body >
 		<div class="wp">
 			<div class="page-wrap wp-inner">
-				<div class="page1-wrap page page1" >
+				<div class="page1-wrap page page1 img-container" >
 					<div class="page1-1  animated js-animate " data-animate="zoomIn">
 						<img src="images/L01_page1_1.png" alt="" class="img-100"/>
 					</div>
@@ -39,16 +39,16 @@
 					</div>
 					<div class="page1-5">
 						<div class="marrier js-animate animated" data-animate="fadeIn15s">徐之恒 & 李蕾	</div>
-						<div class="n-time js-animate animated color-666" data-animate="bounceInRight">2016年10月30日 12时00分</div>
-						<div class="m-time js-animate animated color-666" data-animate="bounceInLeft">农历:九月十二(周三)</div>
+						<div class="n-time js-animate animated color-666" data-animate="bounceInRight"></div>
+						<div class="m-time js-animate animated color-666" data-animate="bounceInLeft"></div>
 					</div>
 					<div class="page1-6 js-animate animated" data-animate="fadeIn25s">
 						<img src="images/L01_page1_5.png" alt="" />
 					</div>
-					<div class="page1-7 js-animate animated color-666" data-animate="fadeIn25s">崇州大酒店</div>
+					<div class="page1-7 js-animate animated color-666 location" data-animate="fadeIn25s"></div>
 				</div>
 				
-				<div class="page2-wrap page page2">
+				<!--<div class="page2-wrap page page2">
 					<div class="page2-1 js-animate animated" data-animate="pulse">
 						<img src="images/L01_page2_1.png" alt="" />
 					</div>
@@ -58,7 +58,7 @@
 					<div class="page2-3 js-animate animated" data-animate="zoomInDown">
 						<img src="images/test1.png" alt="" class="img-100"/>
 					</div>
-				</div>
+				</div>-->
 				
 				<div class="page3-wrap page page3">
 					<div class="page3-5 js-animate animated" data-animate="rubberBand"></div>
