--- a/src/html/index_L02.html
+++ b/src/html/index_L02.html
@@ -24,29 +24,29 @@
 	<body >
 		<div class="wp">
 			<div class="page-wrap wp-inner">
-				<div class="page1-wrap page page1" >
+				<div class="page1-wrap page page1 img-container" >
 					<div class="page1-container  animated js-animate" data-animate="fadeIn">
 						<div class="page1-1  animated js-animate" data-animate="zoomIn5s">
 							<img src="images/L02_page1_1.png" alt="" />
 						</div>
 						<div class="marrier js-animate animated" data-animate="zoomIn10s">徐之恒 & 李蕾</div>
-						<div class="n-time js-animate animated color-666" data-animate="zoomIn15s">2016年10月30日 12时00分</div>
-						<div class="m-time js-animate animated color-666" data-animate="zoomIn15s">农历:九月十二(周三)</div>
-						<div class="page1-location js-animate animated color-666" data-animate="zoomIn20s">崇州大酒店</div>
+						<div class="n-time js-animate animated color-666" data-animate="zoomIn15s"></div>
+						<div class="m-time js-animate animated color-666" data-animate="zoomIn15s"></div>
+						<div class="page1-location js-animate animated color-666 location" data-animate="zoomIn20s"></div>
 						<div class="page1-2 js-animate animated" data-animate="zoomIn25s">
 							<img src="images/L02_page1_2.png" alt="" />
 						</div>
 					</div>
 				</div>
 				
-				<div class="page2-wrap page page2">
+				<!--<div class="page2-wrap page page2">
 					<div class="page2-1 js-animate animated" data-animate="zoomInLeft">
 						<img src="images/test1.png" alt="" class="img-100"/>
 					</div>
 					<div class="page2-2 js-animate animated" data-animate="zoomIn15s">
 						<img src="images/L02_page2_1.png" alt="" />
 					</div>
-				</div>
+				</div>-->
 				
 				<div class="page3-wrap page page3">
 					<div class="page3-5 js-animate animated" data-animate="rubberBand"></div>
@@ -54,6 +54,7 @@
 						<div id="map-container"></div>
 					</div>
 					<div class="GPS js-animate animated" data-animate="fadeIn">
+						<!--<a class="" href="http://api.map.baidu.com/geocoder?address=四川省成都市高新区香年广场&output=html&src=" ">开始导航</a>-->
 					</div>
 					<div class="data-info">
 						<!--<div class="page4-date  js-animate animated" data-animate="rotateInDownRight">时间：2016年9月15日（农历八月十五）</div>
