新增点击下载功能

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,6 +22,8 @@
 		<title>邀请函</title>
 	</head>
 	<body >
+		
+		
 		<div class="wp">
 		<div class="page-wrap wp-inner">
 			<div class="page1-wrap page page1" >
@@ -141,8 +143,8 @@
 				<div class="page6-4 js-animate animated" data-animate="pulse"></div>
 				<div class="logo js-animate animated" data-animate="fadeIn"></div>
 				<div class="company js-animate animated" data-animate="flip">礼金理科技有限公司</div>
-				<div class="iphone-down js-animate animated" data-animate="flipInX"></div>
-				<div class="android-down js-animate animated" data-animate="flipInY"></div>
+				<div class="iphone-down js-animate animated down" data-animate="flipInX" id="ios-applink"></div>
+				<div class="android-down js-animate animated down" data-animate="flipInY" id="android-applink"></div>
 			</div>
 		</div>
 		</div>
@@ -175,7 +177,6 @@
 			}
 			
 			auto.init();
-			
 			
 		</script>
 	</body>
