--- a/src/html/index_L01.html
+++ b/src/html/index_L01.html
@@ -38,7 +38,7 @@
 						<img src="images/L01_page1_4.png" alt="" />
 					</div>
 					<div class="page1-5">
-						<div class="marrier js-animate animated" data-animate="fadeIn15s">徐之恒 & 李蕾	</div>
+						<div class="marrier js-animate animated" data-animate="fadeIn15s"></div>
 						<div class="n-time js-animate animated color-666" data-animate="bounceInRight"></div>
 						<div class="m-time js-animate animated color-666" data-animate="bounceInLeft"></div>
 					</div>
@@ -112,8 +112,8 @@
 				<div class="page5-wrap page page5">
 					<div class="logo js-animate animated" data-animate="fadeIn"></div>
 					<div class="company js-animate animated" data-animate="flip">礼金理科技有限公司</div>
-					<div class="iphone-down js-animate animated" data-animate="flipInX"></div>
-					<div class="android-down js-animate animated" data-animate="flipInY"></div>
+					<div class="iphone-down js-animate animated down" data-animate="flipInX" id="ios-applink"></div>
+				<div class="android-down js-animate animated down" data-animate="flipInY" id="android-applink"></div>
 				</div>
 			</div>
 		</div>
