--- a/src/html/index_L02.html
+++ b/src/html/index_L02.html
@@ -29,7 +29,7 @@
 						<div class="page1-1  animated js-animate" data-animate="zoomIn5s">
 							<img src="images/L02_page1_1.png" alt="" />
 						</div>
-						<div class="marrier js-animate animated" data-animate="zoomIn10s">徐之恒 & 李蕾</div>
+						<div class="marrier js-animate animated" data-animate="zoomIn10s"></div>
 						<div class="n-time js-animate animated color-666" data-animate="zoomIn15s"></div>
 						<div class="m-time js-animate animated color-666" data-animate="zoomIn15s"></div>
 						<div class="page1-location js-animate animated color-666 location" data-animate="zoomIn20s"></div>
@@ -101,8 +101,8 @@
 				<div class="page5-wrap page page5">
 					<div class="logo js-animate animated" data-animate="fadeIn"></div>
 					<div class="company js-animate animated" data-animate="flip">礼金理科技有限公司</div>
-					<div class="iphone-down js-animate animated" data-animate="flipInX"></div>
-					<div class="android-down js-animate animated" data-animate="flipInY"></div>
+					<div class="iphone-down js-animate animated down" data-animate="flipInX" id="ios-applink"></div>
+				<div class="android-down js-animate animated down" data-animate="flipInY" id="android-applink"></div>
 				</div>
 			</div>
 		</div>
